[package]
categories = ["development-tools", "zk"]
description = "Provides tools for writing programs for mozak platform"
edition = "2021"
keywords = ["sdk"]
license = "Apache-2.0"
name = "mozak-sdk"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node/sdk"
version = "0.2.0"

[dependencies]
# TODO(Kapil): Use simpler way to merkleize so that we can `group_by`, and hence the crate
# as dependency.
itertools = { version = "0.12", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["race"] }
rkyv = { version = "=0.8.0-alpha.1", default-features = false, features = ["pointer_width_32", "alloc"] }
rkyv_derive = "=0.8.0-alpha.1"
slice-group-by = { version = "0.3", default-features = false, features = ["nightly"] }

[target.'cfg(not(target_os="mozakvm"))'.dependencies]
hex = "0.4"
plonky2 = { git = "https://github.com/0xmozak/plonky2.git", default-features = false }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1"
serde_json = "1.0"
sha3 = "0.10.8"

[features]
default = ["std", "stdread"]

std = ["plonky2/std"]
stdread = []
