[package]
categories = ["cryptography"]
description = "Collection of signatures to be used in protocol"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "signatures"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4"
itertools = "0.13"
log = "0.4"
num = "0.4"
plonky2 = { workspace = true }
plonky2_crypto = { workspace = true }
serde = "1.0"
sha2 = "0.10"
sha3 = "0.10"


[dev-dependencies]
criterion = { workspace = true, default-features = false }
env_logger = { version = "0.11" }
rand = "0.8"
serde_json = "1.0"

[[bench]]
harness = false
name = "zksigs"
