[package]
edition = "2021"
name = "state"
version = "0.1"

categories = ["cryptography", "state"]
description = "Mozak protocol state layer"
keywords = ["crypto", "zero-knowledge", "state"]
license = "All rights reserved"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node"


[dependencies]
im = { version = "15.1", features = ["serde"] }
