[package]
categories = ["system"]
description = "System abstraction for RISC V"
edition = "2021"
keywords = ["vm", "risc-v"]
license = "All rights reserved"
name = "mozak-system"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]

[dev-dependencies]

[features]
default = ["mozak-ro-memory"]
mozak-ro-memory = []
