[package]
name = "mozak-vm"
description = "RISC V ISA based knowledge argument VM"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/0xmozak/mozak-vm"
readme = "README.md"
license = "All rights reserved"
keywords = ["crypto", "zero-knowledge", "vm"]
categories = ["cryptography"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
elf = { version = "0.7" }
log = "0.4.19"
bitfield = "0.14.0"
im = "15.1.0"
itertools = "0.11.0"
derive_more = "0.99.17"
env_logger = { version = "0.10.0", optional = true }
rand = "0.8.5"

[dev-dependencies]
test-case = "3.1.0"
env_logger = { version = "0.10.0" }
proptest = "1.2.0"

[features]
default = ["std"]
std = ["anyhow/std"]
test = ["env_logger"]
